--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
