--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/iot?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/iot
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-mybatis.mapper-locations=classpath:mappers/*.xml
-mybatis.type-aliases-package=com.it.iotplatform.model
